--- a/library-backend/pom.xml
+++ b/library-backend/pom.xml
@@ -12,7 +12,7 @@
 	<artifactId>library-backend</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>library-backend</name>
-	<description>Livrary project TCCREC</description>
+	<description>Library project TCCREC</description>
 	<url/>
 	<licenses>
 		<license/>
