--- a/library-backend/src/main/resources/application.properties
+++ b/library-backend/src/main/resources/application.properties
@@ -1,1 +1,10 @@
 spring.application.name=library-backend
+# H2 Database Configuration
+spring.datasource.url=jdbc:h2:mem:librarydb
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=rama1982
+spring.datasource.password=password
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.h2.console.enabled=true  # console H2 active
+spring.h2.console.path=/h2-console  # to access via http://localhost:8080/h2-console
+
