--- a/library-backend/src/main/resources/application.properties
+++ b/library-backend/src/main/resources/application.properties
@@ -1,10 +1,12 @@
 # H2 Database Configuration
 spring.datasource.url=jdbc:h2:mem:librarydb
 spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sb
+spring.datasource.username=sa
 spring.datasource.password=
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.show-sql=true
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
 
+# CORS Configuration
+server.port=8080
